styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');

* {
  margin: 0;
  padding: 0;
}

*, *:before, *:after {
  box-sizing: inherit;
}

:root {
  --blue-curious:#1c94d3;
  --white-catskill: #e2e9f1;
  --grey-dove: #656363;
  --yellow-tulip-tree: #e3b030;
  --black-grey-code: #101010;
  --grey-regent: #8095a0;
  --martini: #b39fa1;
  --grey-tower: #b1b9be;
  --chino: #cdc3a1;
}

html {
  box-sizing: border-box;
  font-size: 16px;
  font-family: 'Roboto', sans-serif;
}

.grid-container {
  display: grid;
  grid-template-columns: 52px minmax(325px, auto);
  grid-template-rows: 140px auto;
}

.icon-size-sm {
  height: 18px;
}

/* HEADER SECTION */

header {
 background-color: #ffffff;
 display: grid;
 grid-template-columns: minmax(325px, auto);
 grid-template-rows: 40px 40px 60px;
 box-shadow: 0 3px 6px -3px rgb(0, 0, 0, 0.3);
 z-index: 3;
}


.search {
 display: flex;
 justify-content: center;
 align-items: center;
}

.search > input {
  background-color: var(--white-catskill);
  border: none;
  height: 1.3rem;
  border-radius: 0.65rem;
  width: 70%;
  margin-left: 20px;
  font-size: 0.8rem;
  padding: 0.5rem;
}

.notification {
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 700;
}

.notification > div {
  margin: 0 30px;
  margin-left: 40px;
  margin-right: 25px;
}

.welcome {
  display: none;
  align-items: center;
}

.welcome > div {
  margin-left: 40px;
  margin-right: clamp(0, 10px, 25px);
}

.avatar {
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 700;
  cursor: pointer;
}

.avatar-small {
  width: 40px;
  height: 40px;
  border-radius: 20px;
  font-size: 0.9rem;
  font-weight: 700;
}

.avatar-large {
  width: 50px;
  height: 50px;
  border-radius: 25px;
  font-size: 1.3rem;
  font-weight: 700;
}

.welcome-text > p:first-child {
  font-size: 0.8rem;
}

.welcome-text > p {
  font-size: 1.2rem;
  font-weight: 700;
}

.controls {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

button {
  height: 30px;
  width: 80px;
  background-color: var(--blue-curious);
  color: #ffffff;
  border: none;
  border-radius: 15px;
  font-size: 0.8rem;
  font-weight: 700;
}

/* NAV SECTION */

nav {
  background-color: var(--blue-curious);
  grid-column: 1 / 2;
  grid-row: 1 / 3;
}

nav > ul:first-child {
  font-size: 24px;
  margin-bottom: 30px;
}

nav > ul {
  margin-top: 15px;
  margin-bottom: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  list-style-type: none;
  font-size: 16px;
  font-weight: 700;
}

nav > ul > li {
  display: flex;
  align-items: center;
  margin-bottom: 15px;
}

nav > ul > li:last-child {
  margin-bottom: 0;
}

nav > ul > li > a {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: #ffffff;
}

nav > ul > li > a > span {
  display: none ;
}

/* MAIN SECTION */

main {
  background-color: var(--white-catskill);
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  display: grid;
  grid-template-columns: minmax(305px, auto);
  grid-template-rows: auto auto auto;
  padding: 20px 10px;
  justify-content: center;
}

h1, h2 {
  margin-bottom: 10px;
  font-size: 1.2rem;
  text-align: center;
}

h2 {
  margin-top: 20px;
}

.projects-container {
  display: grid;
  grid-template-columns: minmax(305px, 400px);
  grid-template-rows: repeat(6, 130px);
  gap: 10px 0;
}

.card {
  background-color: #ffffff;
  height: 130px;
  padding: 15px;
  border-radius: 5px;
  border-left: 5px solid var(--yellow-tulip-tree);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.card-text > h3 {
  margin-bottom: 5px;
  font-size: 1rem;
}

.card-text > p {
  color: var(--grey-dove);
  font-size: 0.8rem;
}

.socials {
  display: flex;
  justify-content: flex-end;
}

.socials > img {
  height: 18px;
}

.socials > img:nth-child(2) {
  margin: 0 20px;
}

.announcements {
  margin-top: 10px;
}

.announcement-card {
  display: grid;
  grid-template-columns: minmax(305px, 400px);
  grid-template-rows: auto;
}

.announcements-container {
  padding: 25px;
  border-radius: 5px;
  background-color: #ffffff;
}

.announcements-container > div:first-child {
  margin-top: 0;
}

.announcements-container > div:last-child {
  border-bottom: none;
}

.announcement {
  border-bottom: 1px solid var(--white-catskill);
  height: 60px;
  margin-top: 15px;
}

.announcement > h4 {
  margin-bottom: 5px;
  font-size: 0.9rem;
}

.announcement > p {
    color: var(--grey-dove);
    font-size: 0.7rem;
}

.trending {
  margin-top: 10px;
  margin-bottom: 30px;
}

.trending-card {
  display: grid;
  grid-template-columns: minmax(305px, 400px);
  grid-template-rows: auto;
}

.trending-container {
  padding: 25px;
  border-radius: 5px;
  background-color: #ffffff;
}

.trending-brief {
  display: flex;
  margin-bottom: 15px;
}

.trending-brief > div:first-child {
  margin-right: 50px;
}

/* USER PROFILES */

.morgan {
  background-color: var(--yellow-tulip-tree);
  color: #ffffff;
}

.tegan {
  background-color: var(--martini);
  color: palevioletred;
  border: 1px solid palevioletred;
}

.kendall {
  background-color: var(--grey-dove);
  color: orange;
  border: 1px solid orange;
}

.alex {
  background-color: var(--martini);
  color: rebeccapurple;
  border: 1px solid rebeccapurple;
}

/* FOOTER */

.attribution {
  height: 20px;
  width: 100%;
  position: fixed;
  left: 0;
  bottom: 0;
  text-align: center;
  background-color: #FCFAF9;
}

.attribution a { color: hsl(228, 45%, 44%); }

/* MEDIA QUERIES */

@media only screen and (min-width: 519px) {

  .grid-container {
    grid-template-columns: minmax(175px, 250px) minmax(325px, auto);
  }

  nav > ul > li > a > span {
    display: block ;
    margin-left: 21px;
  }

  nav > ul:first-child > li > a > span {
    display: block ;
    margin-left: 10px;
  }

  nav > ul:first-child {
    margin-left: 15px;
  }

  nav > ul {
    align-items:flex-start;
    margin-left: 24px;
  }
}

@media only screen and (min-width: 900px) {

  .grid-container {
    grid-template-rows: 140px auto;
  }

  header {
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 60px 80px;
   }

   .search {
     justify-content: flex-start;
   }

   .search > input {
    width: 100%;
    height: 1.5rem;
    border-radius: 0.75rem;
  }

  .search > img {
    margin-left: 40px;
  }

  .welcome {
    display: flex;
  }

  .notification {
    justify-content: flex-end;
  }

  .notification > p {
    margin-right: 20px;
  }

  .controls {
    display: flex;
    justify-content:flex-end
  }

  button {

    margin-right: 15px;
  }

  button:last-child {
    margin-right: 20px;
  }

  main {
    grid-template-columns: minmax(300px, auto) minmax(250px, 300px);
    grid-template-rows: auto;
    padding: 20px 10px;
    gap: 20px 20px;
  }

  .projects {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
  }

  .projects-container {
    grid-template-columns: minmax(305px, 500px);
    grid-template-rows: repeat(6, 200px);

    /* .projects-container {
      display: grid;
      grid-template-columns: minmax(305px, 400px);
      grid-template-rows: repeat(6, 130px);
      gap: 10px 0;
    } */
  }

  h1, h2 {
    text-align: left;
  }

  h2 {
    margin-top: 0;
  }

  .card {
    padding: 30px 20px;
    height: 200px;
  }

  .card-text > h3 {
    margin-bottom: 7px;
    font-size: 1.1rem;
  }

  .card-text > p {
    padding-right: 30px;
    font-size: 0.9rem;
  }

  .socials > img:nth-child(2) {
    margin: 0 30px;
  } 

  /* .card {
    background-color: #ffffff;
    height: 130px;
    padding: 15px;
    border-radius: 5px;
    border-left: 5px solid var(--yellow-tulip-tree);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  } */
  
  /* .card-text > h3 {
    margin-bottom: 5px;
    font-size: 1rem;
  }
  
  .card-text > p {
    color: var(--grey-dove);
    font-size: 0.8rem;
  }
  
  .socials {
    display: flex;
    justify-content: flex-end;
  }
  
  .socials > img {
    height: 18px;
  }
  
  .socials > img:nth-child(2) {
    margin: 0 20px;
  } */
  .announcements {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    margin-top: 0;
  }

  .announcement-card {
    grid-template-columns: auto;
  }


  .trending {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    margin-top: 320px;
  }
}

@media only screen and (min-width: 1100px) {
  
  .notification > p {
    margin-right: 40px;
  }

  .welcome-text > p {
    font-size: 1.5rem;
    font-weight: 700;
  
  }
  
  button {
    height: 35px;
    width: 110px;
    border-radius: 20px;
    font-size: 0.9rem;
    margin-right: 25px;
  }

  button:last-child {
    margin-right: 40px;
  }
}

@media only screen and (min-width: 1240px) {

  main {
    padding: 40px 20px;
    justify-content: left;
  }

  .projects-container {
    grid-template-columns: minmax(305px, 500px) minmax(305px, 500px);
    gap: 30px 30px;
  }
}

